--- a/App.css
+++ b/App.css
@@ -2,6 +2,7 @@
 html{
   position:relative;
   min-height:100%;
+  background-color: black;
 }
 #quizs-container{
   position:absolute;
@@ -16,7 +17,7 @@ html{
 #quiz-container{
   background-color: deeppink;
   width:15%;
-  height:45%;
+  height:46%;
   margin:10px;
   float:left;
   border-radius: 10px;
